--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -29,7 +29,10 @@ extra-source-files:
 library
   default-language:    Haskell2010
   hs-source-dirs:      lib
-  build-depends:       base ==4.8.*
+  build-depends:
+      base ==4.8.*
+  exposed-modules:
+    Text.Comarkdown
 
 source-repository head
   type:                 git
