--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -30,6 +30,8 @@ library
   default-language:    Haskell2010
   hs-source-dirs:      lib
   ghc-options:         -Wall
+  other-extensions:
+    Trustworthy
   build-depends:
       base ==4.8.*
     , containers
