--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -41,6 +41,15 @@ library
   exposed-modules:
     Text.Comarkdown
 
+executable comd
+  default-language:    Haskell2010
+  hs-source-dirs:      exe
+  main-is:             Main.hs
+  ghc-options:         -Wall -threaded
+  build-depends:
+      base
+    , comarkdown
+
 source-repository head
   type:                 git
   location:             https://github.com/pharpend/comarkdown.git
