--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -50,6 +50,17 @@ executable comd
       base
     , comarkdown
 
+test-suite spec
+  type:                exitcode-stdio-1.0
+  default-language:    Haskell2010
+  hs-source-dirs:      spec
+  main-is:             Spec.hs
+  ghc-options:         -Wall -threaded
+  build-depends:
+      base
+    , comarkdown
+    , hspec
+
 source-repository head
   type:                 git
   location:             https://github.com/pharpend/comarkdown.git
