Add bytestring and parsec as lib deps

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -36,7 +36,9 @@ library
     Safe
   build-depends:
       base ==4.8.*
+    , bytestring
     , containers
+    , parsec
     , text
     , vector
     , yaml
