--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -44,6 +44,8 @@ library
     , yaml
   exposed-modules:
     Text.Comarkdown
+    Text.Comarkdown.Parser
+    Text.Comarkdown.Types
 
 executable comd
   default-language:    Haskell2010
