--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -63,7 +63,7 @@ test-suite spec
   default-language:    Haskell2010
   hs-source-dirs:      spec
   main-is:             Spec.hs
-  ghc-options:         -Wall -threaded
+  ghc-options:         -Wall -threaded -fno-warn-orphans
   other-extensions:
     OverloadedLists
     OverloadedStrings
