Refactor test suite, add more tests

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -68,6 +68,9 @@ test-suite spec
     OverloadedLists
     OverloadedStrings
     Trustworthy
+  other-modules:
+    Helper
+    HeaderSpec
   build-depends:
       base
     , comarkdown
