--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -53,29 +53,29 @@ executable comd
       base
     , optparse-applicative
 
-test-suite spec
-  type:                exitcode-stdio-1.0
-  default-language:    Haskell2010
-  hs-source-dirs:      spec
-  main-is:             Spec.hs
-  ghc-options:         -Wall -threaded -fno-warn-orphans
-  other-extensions:
-    OverloadedLists
-    OverloadedStrings
-    Trustworthy
-  other-modules:
-    HeaderSpec
-    TestTypes
-    TestTypes.Header.ATX
-    TestTypes.Header.Setext
-    TestTypes.Numeric
-    TestTypes.Text
-  build-depends:
-      base
-    , comarkdown
-    , hspec
-    , QuickCheck
-    , text
+-- test-suite spec
+--   type:                exitcode-stdio-1.0
+--   default-language:    Haskell2010
+--   hs-source-dirs:      spec
+--   main-is:             Spec.hs
+--   ghc-options:         -Wall -threaded -fno-warn-orphans
+--   other-extensions:
+--     OverloadedLists
+--     OverloadedStrings
+--     Trustworthy
+--   other-modules:
+--     HeaderSpec
+--     TestTypes
+--     TestTypes.Header.ATX
+--     TestTypes.Header.Setext
+--     TestTypes.Numeric
+--     TestTypes.Text
+--   build-depends:
+--       base
+--     , comarkdown
+--     , hspec
+--     , QuickCheck
+--     , text
 
 source-repository head
   type:                 git
