--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -64,6 +64,7 @@ test-suite spec
   ghc-options:         -Wall -threaded -fno-warn-orphans
   other-extensions:
     OverloadedLists
+    CPP
     OverloadedStrings
     Trustworthy
   other-modules:
