--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -17,9 +17,13 @@ extra-source-files:
   README.md
 
 library
-  -- exposed-modules:
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >=4.7 && <4.9
   default-language:    Haskell2010
   hs-source-dirs:      src
+  build-depends:
+      base >=4.7 && <4.9
+    , bytestring
+    , containers
+    , text
+    , vector
+  exposed-modules:
+    Text.Comarkdown
