--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -28,6 +28,17 @@ library
   exposed-modules:
     Text.Comarkdown
 
+test-suite tests
+  type: exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs: tests
+  main-is: Spec.hs
+  build-depends:
+      base
+    , comarkdown
+    , hspec
+    , QuickCheck
+
 source-repository head
   type: git
   location: git://github.com/pharpend/comarkdown.git
