--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -17,8 +17,9 @@ extra-source-files:
   README.md
 
 library
-  default-language:    Haskell2010
-  hs-source-dirs:      src
+  default-language:   Haskell2010
+  hs-source-dirs:     src
+  ghc-options:        -Wall
   build-depends:
       base >=4.7 && <4.9
     , bytestring
@@ -33,6 +34,7 @@ test-suite tests
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          Spec.hs
+  ghc-options:      -Wall -threaded
   build-depends:
       base
     , comarkdown
