Refactor Comarkdown library into modules.

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -28,6 +28,7 @@ library
     , vector
   exposed-modules:
     Text.Comarkdown
+    Text.Comarkdown.Types
 
 test-suite tests
   type:             exitcode-stdio-1.0
