Add empty Text.Comarkdown.Parser library.

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -28,6 +28,7 @@ library
     , vector
   exposed-modules:
     Text.Comarkdown
+    Text.Comarkdown.Parser
     Text.Comarkdown.Types
 
 test-suite tests
