--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -20,10 +20,13 @@ library
   default-language:   Haskell2010
   hs-source-dirs:     src
   ghc-options:        -Wall
+  default-extensions:
+    CPP
   build-depends:
       base >=4.7 && <4.9
     , bytestring
     , containers
+    , parsec
     , text
     , vector
   exposed-modules:
