--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -15,16 +15,17 @@ cabal-version:       >=1.10
 extra-source-files:
   LICENSE
   README.md
+  tests/examples/*.test
+  tests/examples/*.exp
 
 library
   default-language:   Haskell2010
   hs-source-dirs:     src
   ghc-options:        -Wall
   default-extensions:
-    CPP
     LambdaCase
   build-depends:
-      base >=4.7 && <4.9
+      base ==4.8.*
     , bytestring
     , containers
     , parsec
