--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -20,8 +20,7 @@ cabal-version:       >=1.10
 extra-source-files:
   LICENSE
   README.md
-  tests/examples/*.test
-  tests/examples/*.exp
+  tests/examples/*.md
 
 library
   default-language:   Haskell2010
