--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -47,19 +47,26 @@ test-suite tests
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          Spec.hs
-  ghc-options:      -Wall -threaded
+  ghc-options: -Wall -threaded
+  default-extensions:
+    OverloadedLists
+  other-extensions:
+    OverloadedStrings
   other-modules:
     ExamplesSpec
+    ParsingSpec
+    Types
   build-depends:
       base
     , bytestring
     , comarkdown
-    ParsingSpec
-    Types
       -- needed for 'makeAbsolute'
     , directory >=1.2.2.0
     , hspec
+    , parsec
     , QuickCheck
+    , text
+    , vector
 
 source-repository head
   type:     git
