--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -25,7 +25,7 @@ extra-source-files:
 library
   default-language:   Haskell2010
   hs-source-dirs:     src
-  ghc-options:        -Wall
+  ghc-options:        -Wall -fno-warn-unused-do-bind
   default-extensions:
     LambdaCase
     OverloadedLists
