Mv ParsingSpec -> Parsers.NonsenseSpec

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -54,7 +54,7 @@ test-suite tests
     OverloadedStrings
   other-modules:
     ExamplesSpec
-    ParsingSpec
+    Parsers.NonsenseSpec
     Types
   build-depends:
       base
