Add more tests!
This tests randomly generated different blocks of nonsense.

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -49,6 +49,7 @@ test-suite tests
   main-is:          Spec.hs
   ghc-options: -Wall -threaded
   default-extensions:
+    LambdaCase
     OverloadedLists
   other-extensions:
     OverloadedStrings
