--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -6,7 +6,6 @@ description:
   it was originally intended for
   <http://www.pandoc.org/README.html#pandocs-markdown Pandoc's Markdown>. At the
   moment, it's very simple, and not even functional.
-
 homepage:            https://github.com/pharpend/comarkdown
 bug-reports:         https://github.com/pharpend/comarkdown/issues
 license:             GPL-3
@@ -20,6 +19,7 @@ cabal-version:       >=1.10
 extra-source-files:
   LICENSE
   README.md
+  tests/examples/*.comd
   tests/examples/*.md
 
 library
@@ -47,21 +47,23 @@ test-suite tests
   default-language: Haskell2010
   hs-source-dirs:   tests
   main-is:          Spec.hs
-  ghc-options: -Wall -threaded
+  ghc-options:
+    -Wall -threaded -fno-warn-orphans
   default-extensions:
     LambdaCase
     OverloadedLists
   other-extensions:
+    FlexibleInstances
     OverloadedStrings
   other-modules:
     ExamplesSpec
-    Parsers.LetSpec
-    Parsers.NonsenseSpec
+    NonsenseSpec
     Types
   build-depends:
       base
     , bytestring
     , comarkdown
+    , containers
       -- needed for 'makeAbsolute'
     , directory >=1.2.2.0
     , hspec
