--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -19,12 +19,12 @@ cabal-version:       >=1.10
 extra-source-files:
   LICENSE
   README.md
-  tests/examples/*.comd
-  tests/examples/*.md
+  src/tests/examples/*.comd
+  src/tests/examples/*.md
 
 library
   default-language:   Haskell2010
-  hs-source-dirs:     src
+  hs-source-dirs:     src/lib
   ghc-options:        -Wall -fno-warn-unused-do-bind
   default-extensions:
     LambdaCase
@@ -45,7 +45,7 @@ library
 test-suite tests
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
-  hs-source-dirs:   tests
+  hs-source-dirs:   src/tests
   main-is:          Spec.hs
   ghc-options:
     -Wall -threaded -fno-warn-orphans
