--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,5 @@
 flags: {}
 packages:
 - '.'
-extra-deps: [exceptional-0.2.0.0]
-resolver: nightly-2015-07-08
+extra-deps: []
+resolver: nightly-2015-07-23
