Add Text.Comarkdown.Parser library

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -48,6 +48,7 @@ library
   exposed-modules:
     Text.Comarkdown
     Text.Comarkdown.Combinators
+    Text.Comarkdown.Parser
     Text.Comarkdown.Types
 
 test-suite tests
