--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -16,6 +16,8 @@ copyright:           Copyright 2015 Peter Harpending
 category:            Text
 build-type:          Simple
 cabal-version:       >=1.10
+data-files:
+  README.md
 extra-source-files:
   LICENSE
   README.md
