--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -21,6 +21,7 @@ data-files:
 extra-source-files:
   LICENSE
   README.md
+  src/tests/no-formatting-examples/*.md
 
 library
   default-language:   Haskell2010
@@ -76,9 +77,9 @@ test-suite tests
     TestTypes
   build-depends:
       base
-    , bifunctors
     , bytestring
     , comarkdown
+    , directory
     , hspec
     , pandoc
     , QuickCheck
