--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -16,16 +16,14 @@ copyright:           Copyright 2015 Peter Harpending
 category:            Text
 build-type:          Simple
 cabal-version:       >=1.10
-data-files:
-  README.md
 extra-source-files:
   LICENSE
   README.md
-  src/tests/no-formatting-examples/*.md
+  tests/no-formatting-examples/*.md
 
 library
   default-language:   Haskell2010
-  hs-source-dirs:     src/lib
+  hs-source-dirs:     lib
   ghc-options:        -Wall -fno-warn-unused-do-bind
   default-extensions:
     FlexibleContexts
@@ -62,7 +60,7 @@ library
 test-suite tests
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
-  hs-source-dirs:   src/tests
+  hs-source-dirs:   tests
   main-is:          Spec.hs
   ghc-options:
     -Wall -threaded -fno-warn-orphans
@@ -73,7 +71,6 @@ test-suite tests
     OverloadedStrings
   other-modules:
     NoFormattingSpec
-    Paths_comarkdown
     TestTypes
   build-depends:
       base
