Fix stupid friggin cabal is friggin stupid
Cabal wouldn't compile Examples unless it was ExamplesSpec, even though
it was in other-modules.

I will personally see to it that cabal is whipped and caned for its
idiocy.

--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -71,7 +71,7 @@ test-suite tests
     OverloadedLists
     OverloadedStrings
   other-modules:
-    IOExamples
+    ExamplesSpec
     NoFormattingSpec
     TestTypes
   build-depends:
