--- a/comarkdown.cabal
+++ b/comarkdown.cabal
@@ -72,6 +72,7 @@ test-suite tests
     OverloadedLists
     OverloadedStrings
   other-modules:
+    CompilerSpec
     ExamplesSpec
     NoFormattingSpec
     TestTypes
